--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -2,6 +2,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka-primary:8010/eureka/,http://eureka-secondary:8011/eureka/,http://eureka-tertiary:8012/eureka/
+  instance:
+    hostname: eureka-api-gateway
 server:
   port: 8080
 spring:
